# swarms-rs

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: agent.rs  concurrent_workflow.rs  concurrent_workflow_run.rs  concurrent_workflow_run_batch.rs  swarm_one_to_one.rs
src/: agent.rs  async_workflow.rs  concurrent_workflow.rs  conversation.rs  file_persistence.rs  lib.rs  multi_agent_exec.rs  persistence.rs  swarm.rs  swarming_architectures.rs  workflow.rs
src/agent/: rig_agent.rs
swarms-macro/: Cargo.toml
swarms-macro/src/: lib.rs  tool.rs
swarms-rs/: Cargo.toml
swarms-rs/benches/: graph_workflow_benchmarks.rs
swarms-rs/examples/: agent.rs  auto_swarm.rs  concurrent_workflow_run.rs  concurrent_workflow_run_batch.rs  graph_workflow.rs  multi_agent_orchestrator.rs  sequential_workflow.rs  simple_swarms_agent.rs  swarm_one_to_one.rs  tool.rs
swarms-rs/src/: agent.rs  auto_swarm.rs  concurrent_workflow.rs  conversation.rs  graph_workflow.rs  lib.rs  llm.rs  multi_agent_orchestrator.rs  sequential_workflow.rs  swarm.rs  swarm_router.rs  swarming_architectures.rs  system_resource_monitor.rs  tool.rs  utils.rs  workflow_config.rs
swarms-rs/src/agent/: rig_agent.rs  swarms_agent.rs
swarms-rs/src/llm/: request.rs
swarms-rs/src/llm/provider/: openai.rs
swarms-tool/: Cargo.toml
swarms-tool/src/: add.rs
