[package]
name = "swarms-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the Swarms framework for building multi-agent systems"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
futures = "0.3"
uuid = { version = "1.15", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.25"
