[package]
name = "swarms-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the Swarms framework for building multi-agent systems"
license = "MIT"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6", features = ["serde"] }
tokio = { version = "1" }
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
twox-hash = "2.1"
futures = "0.3"
uuid = { version = "1.15", features = ["v4", "serde"] }
zstd = "0.13.3"

# rig
rig-core = { git = "https://github.com/M4n5ter/rig", branch = "main", features = [
    "all",
] }

# swarms
swarms-macro = { path = "../swarms-macro" }

[dev-dependencies]
anyhow = "1"
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
